--- a/Styles.css
+++ b/Styles.css
@@ -5,6 +5,7 @@
 }*/
 body
 {
+    color: #40514E;
     margin: 50px auto 0 auto;
     margin: 0px;
     text-align: center;
@@ -18,24 +19,44 @@ h1
     line-height: 2;
     font-family: 'Sacramento', cursive;
 }
+.h33
+{
+    font-size: 30px;
+}
 h2
 {
     color: #22577E;
     font-weight: normal;
     font-family: 'Montserrat', sans-serif;
+    padding-bottom: 10px;
 }
 h3
 {   
     font-family: 'Montserrat', sans-serif;
+    color: #22577E;
 }
 p
 {
     text-align: bold;
     font-size: 1.262rem;
+    line-height: 2;
+}
+.javaimg
+{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
 }
 .myimg
 {
     width: 200px;
+    background-color: white;
+}
+.giphy
+{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
 }
 .top-container
 {
@@ -51,13 +72,12 @@ p
 {
     color: black;
 }
-/*.profile
+.skill-row
 {
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
-    line-height: 2;
-}*/
+}
 /*.middle-container
 {
     border: solid;
@@ -66,16 +86,18 @@ p
     width: 200px;
     height: 200px;
     margin-left: 230px;
-}
+}**/
 .bottom-container
 {
-    background-color: yellow;
-    border: solid;
-    border-width: 10px;
-    width: 200px;    
-    height: 200px;
-    margin-left: 460px;
-}*/
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
+}
+.profile
+{
+    margin: 100px;
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+}
 .name
 {
     color: #11999E;
@@ -91,8 +113,54 @@ p
 {
     position: absolute;
     bottom: 400px;
+    left: 270px;
+}
+.hr
+{
+    border: dotted #EAF6F6 6px;
+}
+.contact-me
+{
+    width: 40%;
+    margin: 40px auto 60px;
+}
+a:hover
+{
+    color: #EAF6F6;
+}
+.copywrite
+{
+    color: #EAF6F6;
+    font-size: 0.88rem;
+    padding: 20px 0;
 }
 /*.pro
 {
     text-decoration: underline;   
 }*/
+.btn {
+    background: #30e3ce;
+    background-image: -webkit-linear-gradient(top, #30e3ce, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3ce, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3ce, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3ce, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3ce, #2bc4ad);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: 'Montserrat', sans-serif;
+    color: #1f628d;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
